@@ -1,38 +1,0 @@
-/* XPM */
-static char * cursor_select_xpm[] = {
-"32 32 3 1",
-" 	c None",
-".	c #FFFFFF",
-"+	c #000000",
-"..                              ",
-".+.                             ",
-".++.                            ",
-".+++.                           ",
-".++++.                          ",
-".+++++.                         ",
-".++++++.                        ",
-".+++++++.                       ",
-".++++++++.                      ",
-".+++++++++.                     ",
-".+++++....                      ",
-".++.++.             +           ",
-".+. .++.            ++          ",
-" .  .++.            ++          ",
-"     .++.           ++          ",
-"     .++.   ++++    ++++++      ",
-"      ..   +   ++   ++   ++     ",
-"               ++   ++   ++     ",
-"            +++++   ++   ++     ",
-"           ++  ++   ++   ++     ",
-"          ++   ++   ++   ++     ",
-"           ++  ++   +++  ++     ",
-"           ++++ ++  ++ +++      ",
-"                                ",
-"                                ",
-"                                ",
-"                                ",
-"                                ",
-"                                ",
-"                                ",
-"                                ",
-"                                "};
