@@ -245,15 +245,15 @@ static char * handle_center_xpm[] = {
 ".	c #000000",
 "+	c #FFFFFF",
 "             ",
-"    .....    ",
-"   .+++++.   ",
-"  .+++++++.  ",
-" .++++.++++. ",
-" .++++.++++. ",
-" .++.....++. ",
-" .++++.++++. ",
-" .++++.++++. ",
-"  .+++++++.  ",
-"   .+++++.   ",
-"    .....    ",
+"      .      ",
+"      .      ",
+"      .      ",
+"    ++.++    ",
+"    ++.++    ",
+" ..... ..... ",
+"    ++.++    ",
+"    ++.++    ",
+"      .      ",
+"      .      ",
+"      .      ",
 "             "};
