@@ -1,3 +1,7 @@
+2002-11-17  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.40.
+
 2002-11-17  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from work of
