@@ -1,3 +1,7 @@
+2002-11-17  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/helper/sodipodi-ctrl.c (sp_ctrl_build_cache): Cleaned up bitmap build
+
 2002-11-17  Masatake YAMATO  <jet@gyve.org>
 
 	* src/dialogs/xml-tree.c (sp_xml_tree_dialog): Added small
